...
    </dependencies>
    <scenes>
        <!--Window Controller-->
        <scene sceneID="fgC-qG-q9X">
            <objects>
                <windowController id="xes-OL-vx9" customClass="ChangeZoneWindowController" customModule="GeoTag" customModuleProvider="target" sceneMemberID="viewController">
                    <window key="window" title="Change Time Zone" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="Tka-3L-23I">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                        <rect key="contentRect" x="425" y="462" width="480" height="270"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1415"/>
                        <view key="contentView" id="KOH-U7-ROL">
                            <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
...
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Svm-5h-d2q">
                                <rect key="frame" x="356" y="13" width="81" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Change" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="UyO-ol-a1T">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                    <string key="keyEquivalent" base64-UTF8="YES">
DQ
</string>
                                </buttonCell>
...
                                    <action selector="zoneChanged:" target="bU7-R8-ocO" id="aGZ-Bi-VU5"/>
                                </connections>
                            </button>
                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KZY-E3-jGo">
                                <rect key="frame" x="282" y="13" width="76" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="if5-ju-Ese">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                    <string key="keyEquivalent" base64-UTF8="YES">
Gw
</string>
                                </buttonCell>
...
                                <rect key="frame" x="20" y="58" width="410" height="5"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                            </box>
                        </subviews>
                    </view>
                    <connections>
                        <outlet property="currentTimeZone" destination="pQe-nX-kob" id="589-cE-ryD"/>
                        <outlet property="currentUtc" destination="NfR-5A-QBc" id="6Xp-QY-0iP"/>
                        <outlet property="selectedId" destination="8Yr-Su-OzM" id="L4j-SZ-ixj"/>
                        <outlet property="selectedZone" destination="Ns2-RX-T9F" id="pAF-2E-k0g"/>
                    </connections>
                </viewController>
                <customObject id="9uD-mB-xHs" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
...
