...
                <outlet property="appDelegate" destination="Voe-Tx-rLC" id="KqX-ai-VFl"/>
                <outlet property="mapTypeControl" destination="UAa-bh-Wko" id="8Ar-sO-rpi"/>
                <outlet property="mapView" destination="Zwv-MK-4Du" id="zEq-nz-0pQ"/>
                <outlet property="search" destination="cBm-xR-XMN" id="ykD-bf-zqn"/>
            </connections>
        </viewController>
        <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
            <items>
                <menuItem title="GeoTag" id="1Xt-HY-uBw">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="GeoTag" systemMenu="apple" id="uQy-DD-JDr">
                        <items>
                            <menuItem title="About GeoTag" id="5kV-Vb-QxS">
...
                            <menuItem title="Open…" keyEquivalent="o" id="IAo-SY-fd9">
                                <connections>
                                    <action selector="showOpenPanel:" target="Voe-Tx-rLC" id="Urn-mG-qJg"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="m54-Is-iLE"/>
                            <menuItem title="Close" keyEquivalent="w" id="DVo-aG-piG">
                                <connections>
                                    <action selector="performClose:" target="-1" id="HmO-Ls-i7Q"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Save" keyEquivalent="s" id="pxx-59-PXV">
                                <connections>
...
                    </menu>
                </menuItem>
                <menuItem title="Edit" id="5QF-Oa-p0T">
                    <modifierMask key="keyEquivalentModifierMask"/>
                    <menu key="submenu" title="Edit" id="W48-6f-4Dl">
                        <items>
                            <menuItem title="Undo" keyEquivalent="z" id="dRJ-4n-Yzg">
                                <connections>
                                    <action selector="undo:" target="-1" id="M6e-cu-g7V"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Redo" keyEquivalent="Z" id="6dh-zS-Vam">
                                <connections>
...
